# p4TSA

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  README.rst  bind.sh  conf.py  index.rst  install_dependencies.sh  install_full_dependencies.sh  requirements.txt
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: genindex.html  objects.inv  search.html  searchindex.js
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  conf.py  index.md  index.rst  modules.rst  pyTSA.rst  pyWDFml.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/api/: classFunctionParser.rst  classMFCarchive.rst  class_view_hierarchy.rst  classeternity_1_1Ifactory.rst  classeternity_1_1archive.rst  classeternity_1_1bin__archive.rst  classeternity_1_1exception.rst  classeternity_1_1factory.rst  classeternity_1_1file__archive.rst  classeternity_1_1node.rst  classeternity_1_1xml__archive.rst  classeternity_1_1xml__scanner.rst  classtsa_1_1ADC__Channel.rst  classtsa_1_1AR2.rst  classtsa_1_1AR2Parcor.rst  classtsa_1_1ARMAFilter.rst  classtsa_1_1ARMAView.rst  classtsa_1_1ARMAfit.rst  classtsa_1_1AlgoBase.rst  classtsa_1_1ArBurgEstimator.rst  classtsa_1_1ArDurbinEstimator.rst  classtsa_1_1Arma2Psd.rst  classtsa_1_1Arma2TF.rst  classtsa_1_1BLInterpolation.rst  classtsa_1_1BartlettWindow.rst  classtsa_1_1BaseFFT.rst  classtsa_1_1BaseView.rst  classtsa_1_1BaseWindow.rst  classtsa_1_1BisquareWindow.rst  classtsa_1_1ButterworthFilter.rst  classtsa_1_1ChannelDescriptor.rst  classtsa_1_1Cholesky.rst  classtsa_1_1ClusterizedEvent.rst  classtsa_1_1ClusterizedEventFull.rst  classtsa_1_1ClusterizedEventFullFeatured.rst  classtsa_1_1ComplexFFT.rst  classtsa_1_1Cs2HammingWindow.rst  classtsa_1_1Cs2HannWindow.rst  classtsa_1_1DCT.rst  classtsa_1_1DST.rst  (+306 more)
docs/structure/: contact.rst  installation.rst  introduction.rst  source_code.rst  tutorial.rst
docs/structure/libs/: AR2.rst  AR2Parcor.rst  ARMAFilter.rst  ARMAView.rst  ARMAfit.rst  AlgoBase.rst  AlgoExceptions.rst  ArBurgEstimator.rst  ArDurbinEstimator.rst  Arma2Psd.rst  Arma2TF.rst  BLInterpolation.rst  BartlettWindow.rst  BaseFFT.rst  BaseView.rst  BaseWindow.rst  BisquareWindow.rst  ButterworthFilter.rst  ClusterizedEventFullFeatured.rst  DCT.rst  (+47 more)
include/: AR2.hpp  AR2Parcor.hpp  ARMAFilter.hpp  ARMAView.hpp  ARMAfit.hpp  AlgoBase.hpp  AlgoExceptions.hpp  ArBurgEstimator.hpp  ArDurbinEstimator.hpp  Arma2Psd.hpp  Arma2TF.hpp  BLInterpolation.hpp  BartlettWindow.hpp  BaseFFT.hpp  BaseView.hpp  BaseWindow.hpp  BisquareWindow.hpp  ButterworthFilter.hpp  Cholesky.hpp  ClusterizedEventFullFeatured.hpp  ComplexFFT.hpp  CreateDvector.hpp  Cs2HammingWindow.hpp  Cs2HannWindow.hpp  DCT.hpp  DST.hpp  DoubleWhitening.hpp  EventDescription.hpp  EventFullFeatured.hpp  FifoBuffer.hpp  FrameIChannel.hpp  FrameIStream.hpp  IDCT.hpp  InverseRealFFT.hpp  KaiserWindow.hpp  LSLLearning.hpp  LSLfilter.hpp  LatticeFilter.hpp  LatticeView.hpp  LeastSquaresLattice.hpp  (+31 more)
include/eternity/: MFCArchive.h  algorithms.hpp  dynamic.cpp  dynamic.hpp  eternity.cpp  eternity.hpp  persist.cpp  persist.hpp  persist_xml.cpp  persist_xml.hpp  xmlscanner.cpp  xmlscanner.hpp
python-wrapper/: .travis.yml  CMakeLists.txt  README.rst  pytest.ini  pytsa.cpp  setup.cfg  setup.py
python-wrapper/doc/: Makefile  conf.py  index.rst  modules.rst  setup.rst
python-wrapper/examples/: WDFConfig.ini  WavWdfETG.py  Whitening.ini  Whitening.py
python-wrapper/pyWDF/: pyWDFml.rst  setup.py
python-wrapper/pytsa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-wrapper/tests/: test_01.py
src/: AR2.cpp  AR2Parcor.cpp  ARMAFilter.cpp  ARMAfit.cpp  ArBurgEstimator.cpp  ArDurbinEstimator.cpp  Arma2Psd.cpp  Arma2TF.cpp  BLInterpolation.cpp  BaseWindow.cpp  ButterworthFilter.cpp  CMakeLists.txt  Cholesky.cpp  ClusterizedEventFullFeatured.cpp  ComplexFFT.cpp  CreateDvector.cpp  DCT.cpp  DST.cpp  DoubleWhitening.cpp  EventDescription.cpp  EventFullFeatured.cpp  FifoBuffer.cpp  FrameIChannel.cpp  FrameIStream.cpp  IDCT.cpp  InverseRealFFT.cpp  LSLLearning.cpp  LSLfilter.cpp  LatticeFilter.cpp  LeastSquaresLattice.cpp  MYWE.cpp  NotchWidrow.cpp  Parcor2AR.cpp  RLSCanceler.cpp  RealFFT.cpp  SelectionOrderCriteria.cpp  VArma2TF.cpp  ViewUtil.cpp  WDF2Classify.cpp  WDF2Reconstruct.cpp  (+12 more)
test/: test.py
(+11 files in other folders)
